[gd_scene load_steps=14 format=3 uid="uid://dr6u5u8dp7764"]

[ext_resource type="PackedScene" uid="uid://ck3weatx4ste5" path="res://static_body_3d.tscn" id="1_mlyb6"]
[ext_resource type="PackedScene" uid="uid://br01chminlckq" path="res://player.tscn" id="2_pg1js"]
[ext_resource type="PackedScene" uid="uid://bmvft3kj05ikw" path="res://receptionist.tscn" id="3_tw1kp"]
[ext_resource type="Script" path="res://receptionist.gd" id="4_nss81"]
[ext_resource type="PackedScene" uid="uid://brv6gde812xx" path="res://dialogue/dialogue.tscn" id="5_x0ye0"]
[ext_resource type="PackedScene" uid="uid://ylveswy75snr" path="res://assets/VNB Low Poly Office Set Updated/FBX/Separated/Chair_B.fbx" id="6_qv2k8"]
[ext_resource type="PackedScene" uid="uid://cf3agbcxiwo6w" path="res://assets/VNB Low Poly Office Set Updated/FBX/Separated/Door_A.fbx" id="7_1a3f0"]
[ext_resource type="PackedScene" uid="uid://rtvijb3maqdb" path="res://assets/VNB Low Poly Office Set Updated/FBX/Separated/Office_Desk_1.fbx" id="8_j2wwv"]
[ext_resource type="PackedScene" uid="uid://b3b153cqmt3sr" path="res://assets/VNB Low Poly Office Set Updated/FBX/Separated/Office_Desk_4_Rounded.fbx" id="9_gfxmx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_aktj1"]
height = 12.9131
radius = 9.10374

[sub_resource type="BoxShape3D" id="BoxShape3D_bkdib"]
size = Vector3(48.2826, 1, 72.301)

[sub_resource type="BoxShape3D" id="BoxShape3D_3bd2f"]
size = Vector3(1, 10, 15)

[sub_resource type="BoxMesh" id="BoxMesh_mchv3"]
size = Vector3(1, 10, 15)

[node name="Node3D" type="Node3D"]

[node name="receptionist" parent="." instance=ExtResource("3_tw1kp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
script = ExtResource("4_nss81")

[node name="Timer" type="Timer" parent="receptionist"]

[node name="chat_detection_area" type="Area3D" parent="receptionist"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="receptionist/chat_detection_area"]
shape = SubResource("CylinderShape3D_aktj1")

[node name="Dialogue" parent="receptionist" instance=ExtResource("5_x0ye0")]
offset_right = 346.0
offset_bottom = 268.0

[node name="player" parent="." instance=ExtResource("2_pg1js")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1.198)

[node name="Camera" type="Camera3D" parent="player"]
transform = Transform3D(0.999957, 2.99752e-05, -0.00928451, 0, 0.999995, 0.00322851, 0.00928456, -0.00322837, 0.999952, -0.0689928, 0.029552, -0.276869)
current = true
fov = 85.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.945433, 0.325816, 0, -0.325816, 0.945433, 0, 4.88363, 0.2302)

[node name="ground" parent="." instance=ExtResource("1_mlyb6")]
transform = Transform3D(0.340957, 0, 0, 0, 6.72869, -0.0126542, 0, 0.0896072, 0.950214, -0.036, 0, 0.029)

[node name="respawn collision" type="Area3D" parent="."]
transform = Transform3D(-0.999957, -2.9975e-05, 0.00928442, 0, 0.999995, 0.00322851, -0.00928447, 0.00322837, -0.999952, 0.0372552, 3.18482, 3.69186)

[node name="CollisionShape3D" type="CollisionShape3D" parent="respawn collision"]
transform = Transform3D(10.5247, 1.27329e-11, -3.72529e-09, 2.91038e-11, 0.988295, 5.58794e-09, 2.23517e-08, -2.32831e-09, 4.30843, -2.98023e-08, -14.4009, -4.76837e-07)
shape = SubResource("BoxShape3D_bkdib")

[node name="RightWallStaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWallStaticBody3D"]
shape = SubResource("BoxShape3D_3bd2f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWallStaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("BoxMesh_mchv3")

[node name="RightWallStaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWallStaticBody3D2"]
shape = SubResource("BoxShape3D_3bd2f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWallStaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.3802, 0, 0)
mesh = SubResource("BoxMesh_mchv3")
skeleton = NodePath("../../RightWallStaticBody3D2")

[node name="RightWallStaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.41837, 0, -31.2307)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWallStaticBody3D3"]
shape = SubResource("BoxShape3D_3bd2f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWallStaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.3802, 0, 8.65894)
mesh = SubResource("BoxMesh_mchv3")
skeleton = NodePath("../../RightWallStaticBody3D2")

[node name="RightWallStaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.41837, 0, -16.041)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWallStaticBody3D4"]
shape = SubResource("BoxShape3D_3bd2f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWallStaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.3802, 0, 8.65894)
mesh = SubResource("BoxMesh_mchv3")
skeleton = NodePath("../../RightWallStaticBody3D2")

[node name="ChairB" parent="." instance=ExtResource("6_qv2k8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.08618)

[node name="Door" parent="." instance=ExtResource("7_1a3f0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.31012, 0, -5.85132)

[node name="Root Scene" parent="." instance=ExtResource("8_j2wwv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.12344, 0, -3.96838)

[node name="OfficeDesk4Rounded" parent="." instance=ExtResource("9_gfxmx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.610901, 0, -3.64294)

[node name="roof" parent="." instance=ExtResource("1_mlyb6")]
transform = Transform3D(0.303583, 0, 0, 0, 18.0417, 2.23517e-08, 0, -2.98023e-08, 0.936042, 0.467999, 5.046, 2.90573e-07)
visible = false

[connection signal="timeout" from="receptionist/Timer" to="receptionist" method="_on_timer_timeout"]
[connection signal="body_entered" from="receptionist/chat_detection_area" to="receptionist" method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="receptionist/chat_detection_area" to="receptionist" method="_on_chat_detection_area_body_exited"]
[connection signal="dialogue_finished" from="receptionist/Dialogue" to="receptionist" method="_on_dialogue_dialogue_finished"]
